--- a/css/setup.css
+++ b/css/setup.css
@@ -1,17 +1,27 @@
 body {
-    background-color: skyblue;
+    background-color:whitesmoke;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
 }
 
 a {
     color: inherit;
+    text-decoration: none;
 }
 
 .active {
-    color: red;
+    color: white;
+    font-weight: 500;
 }
 
-.my-active {
-    color: rgb(138, 68, 138);
+.keep-filter-search {
+    margin-left: 30px;
+}
+
+.keep-filter-drop {
+    margin-left: 5px;
+}
+
+#by-type {
+    margin-left: 5px;
 }
