--- a/css/mail/main.mail.css
+++ b/css/mail/main.mail.css
@@ -1,16 +1,26 @@
-/* .mail-list{
+.main-mail {
+  margin: 10px;
+}
+.mail-list{
 
-  width: fit-content;
+  width: 80%;
   
-  gap: 15px;
+  
+  gap: 9px;
 }
 .mail-preview{
-    width: 100%;
+  /* text-align: left; */
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-    padding: 5px;
+    padding: 2px;
     text-align: center; 
 }
 
-h3 {
+.mail-preview h3 {
     text-align: left;
-} */
+    cursor:pointer;
+}
+.mail-filter input{
+  width: 20%;
+  height: 4%;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
