--- a/css/apps/keep/KeepPreview.css
+++ b/css/apps/keep/KeepPreview.css
@@ -7,6 +7,10 @@
     border-radius: 10px;
 }
 
+.keep-preview img{
+    width: 100%;
+}
+
 .keep-list {
     display: flex;
     flex-direction: row;
