--- a/css/setup.css
+++ b/css/setup.css
@@ -4,6 +4,13 @@ body {
     margin: 0;
 }
 
+.main-appsus {
+    background-color:whitesmoke;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    /* height: 100vh; */
+}
+
 a {
     color: inherit;
     text-decoration: none;
