--- a/css/setup.css
+++ b/css/setup.css
@@ -3,7 +3,9 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
 }
-
+.home {
+    height: 50%;
+}
 a {
     color: inherit;
     text-decoration: none;
