--- a/css/mail/main.mail.css
+++ b/css/mail/main.mail.css
@@ -10,23 +10,27 @@
   gap: 9px;
 }
 
-.mail-preview{
+.mail-preview {
   /* text-align: left; */
+    opacity: 0.999;
     border: 1px burlywood;
-    
     margin: 2px;
     border-radius: 7px;
     background-color:rgb(255, 255, 255);
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
     padding: 2px;
     text-align: center; 
+    -webkit-transition: all 0.8s linear;
+    -moz-transition: all 0.8s linear;
+    transition: all 0.8s linear;
   
 }
 
 .mail-preview:hover{
   background-color:beige;
-}
+  transition: all 0.2s ease-out;
 
+}
 .mail-preview h3 {
     font-weight: 410;
     color: black;
@@ -37,10 +41,14 @@
   margin-bottom: 2px;
 }
 .mail-filter input{
+  border-style:inset;
   margin-left: 22px;
   width: 20%;
   height: 3vh;
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  border: 2px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .flex input{ 
@@ -48,10 +56,15 @@
   height: 3vh;
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
   margin-left: 22px;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   
 }
 
 .mail-filter button {
+  width: 120px;
+  border-radius: 10%;
   border: none;
   margin-left: 5px;
   background-color:lightskyblue;
@@ -61,7 +74,9 @@
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 .flex button{
+  width: 120px;
   margin-left: 5px;
+  border-radius: 10%;
   border: none;
   cursor: pointer;
   background-color:lightskyblue;
