--- a/css/cmps/AppHome.css
+++ b/css/cmps/AppHome.css
@@ -1,5 +1,11 @@
-/* .home {
-    height: 70%;
+footer {
+    position: fixed;
+    bottom:0;
+}
+
+/* header {
+        position: fixed;
+        top:0;
 } */
 
 h1 {
