--- a/css/apps/keep/KeepPreview.css
+++ b/css/apps/keep/KeepPreview.css
@@ -5,6 +5,7 @@
     background-color: lightskyblue;
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .keep .keep-text {
