--- a/css/apps/keep/KeepPreview.css
+++ b/css/apps/keep/KeepPreview.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     background-color: khaki;
     text-align: center;
+    min-width: 150px;
 }
 
 .keep .keep-video {
@@ -33,6 +34,7 @@
     flex-direction: column;
     background-color: salmon;
     text-align: center;
+    min-width: 150px;
 }
 
 .preview-nav {
@@ -152,4 +154,9 @@ select {
     padding-right: 5px;
     padding-left: 5px;
     color: black;
+}
+
+.todo-p{
+text-align: left;
+width: 100%;
 }
